--- a/mysite/blog/templates/base.html
+++ b/mysite/blog/templates/base.html
@@ -35,9 +35,9 @@
                         <li class="">
                              <a href="https://github.com/ghacer">GitHub</a>
                         </li>
-<!--                    <li class="">
-                             <a href=" url 'blog.about' %}">About</a>
-                        </li> --> 
+                    <li class="">
+                             <a href="{% url 'blog:about' %}">About</a>
+                        </li> 
                     </ul>
                     <form class="navbar-form pull-right" method="get" action="/">
                         <input type="text" class="form-control" name="s" id="s" style="width: 200px;">
