--- a/mysite/blog/templates/blog/index.html
+++ b/mysite/blog/templates/blog/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load pagination_tags %}
 
 {% if title %}
     {% block title %}{{ title }}{% endblock %}
@@ -21,6 +22,7 @@
 {% endblock %}
 
 {% block main %}
+{% autopaginate posts %}
   {% for post in posts %}
 	<div class='caption'>
 	  <h3 class='under_line'>
@@ -42,4 +44,5 @@
 	</div>
         <br/>
   {% endfor %}
+{% paginate %}
 {% endblock %}
