真的是调整statifiles“

--- a/mysite/blog/templates/blog/_side.html
+++ b/mysite/blog/templates/blog/_side.html
@@ -8,7 +8,7 @@ Python学习交流群：<strong>481276015 </strong><i>cxc</i>
 </p>
 <br>
 
-推荐DO主机：<a href="https://www.digitalocean.com/?refcode=4b3f2684a507">DigitalOcean</a>
+推荐DO主机：<a href="www.digitalocean.com/?refcode=0883864832dc">DigitalOcean</a>
 <br/>
 <p>域名买自Godaddy，购买折扣码: WOW5fire</p>
 <br/>
